# hysticket

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: config.py  db.py  dependencies.py  enums.py  main.py  models.py  schemas.py  security.py  seed.py  storage.py
apps/api/app/routers/: __init__.py  auth.py  devices.py  stores.py  tickets.py
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/login/: page.tsx
apps/web/app/admin/reports/: page.tsx
apps/web/app/admin/stores/: page.tsx
apps/web/app/admin/tickets/: page.tsx
apps/web/app/admin/tickets/[id]/: page.tsx
apps/web/app/api/admin/login/: route.ts
apps/web/app/api/admin/tickets/: route.ts
apps/web/app/api/audit-log/: route.ts
apps/web/app/api/store-session/: route.ts
apps/web/app/api/store/login/: route.ts
apps/web/app/api/store/logout/: route.ts
apps/web/app/api/store/me/: route.ts
apps/web/app/api/store/set/: route.ts
apps/web/app/api/store/tickets/: route.ts
apps/web/app/api/tickets/: route.ts
apps/web/app/debug-auth/: page.tsx
apps/web/app/store/login/: page.tsx
apps/web/app/store/tickets/: page.tsx
apps/web/lib/: admin-auth.ts  api.ts  audit.ts  auth.ts  resend.ts  store-session.ts  stores.ts  supabase-server.ts  telegram.ts  types.ts
(+10 files in other folders)
